--- a/package.json
+++ b/package.json
@@ -30,16 +30,14 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^20.0.0",
     "@angular/build": "^20.1.5",
     "@angular/cli": "^20.1.5",
     "@angular/compiler-cli": "^20.1.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.8.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@supabase/supabase-js": "^2.55.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.6.1",
     "typescript": "~5.8.2"
   }
 }
